--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -74,7 +74,7 @@
         android:layout_alignParentRight="true" >
 
         <ImageView
-            android:id="@+id/imageViewCog"
+            android:id="@+id/setting_circle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10.0dip"
